@@ -4,13 +4,14 @@ INCLUDES = -I$(top_srcdir)/common -I$(top_srcdir)/include
 
 noinst_HEADERS = orpostlist.h andpostlist.h andnotpostlist.h \
  andmaybepostlist.h xorpostlist.h branchpostlist.h filterpostlist.h \
- emptypostlist.h nearpostlist.h branchtermlist.h ortermlist.h
+ emptypostlist.h phrasepostlist.h branchtermlist.h ortermlist.h \
+ selectpostlist.h
 
 noinst_LTLIBRARIES = libmatcher.la
 
 libmatcher_la_SOURCES = orpostlist.cc andpostlist.cc \
- andnotpostlist.cc andmaybepostlist.cc xorpostlist.cc nearpostlist.cc \
+ andnotpostlist.cc andmaybepostlist.cc xorpostlist.cc phrasepostlist.cc \
  irweight.cc boolweight.h bm25weight.h bm25weight.cc tradweight.h tradweight.cc \
  filterpostlist.cc ortermlist.cc expandweight.cc rset.cc \
  localmatch.cc multimatch.cc expand.cc stats.cc networkmatch.cc \
- leafdocument.cc
+ leafdocument.cc selectpostlist.cc
