@@ -1,3 +1,13 @@
+Fri Jun 16 14:57:00 BST 2000 Olly Betts
+
+	* Rearranged to create PhrasePostList (currently a clone of
+	  NearPostList).  Shared code is in super classes.
+
+	* `nearpostlist.*' renamed to `phrasepostlist.*'.
+
+	* Fixed warning about declaration vs initialisation order in
+	  OmQueryInternal
+
 Fri Jun 16 12:49:00 BST 2000 Olly Betts
 
 	* NEAR now works with distributed searching
